배포이벤트 작업중

--- a/1-0-workload_list_type-card.html
+++ b/1-0-workload_list_type-card.html
@@ -154,7 +154,7 @@
 						</select>
 						<div class="btn-type--wrap">
 							<button type="button" class="btn__type--card is-active"><span>카드형</span></button>
-							<button type="button" class="btn__type--list" onclick="window.location.href='1-workload_list_type-list.html'"><span>목록형</span></button>
+							<button type="button" class="btn__type--list" onclick="window.location.href='1-0-workload_list_type-list.html'"><span>목록형</span></button>
 						</div>
 					</div>
 					<ul class="workload-card__list">
@@ -260,8 +260,8 @@
 									</div>
 									<div class="btn--wrap">
 										<button type="button" class="btn__default btn__deploy started"><span>배포 중지</span></button>
-										<button type="button" class="btn__default white btn__detail" onclick="window.location.href='1-2-user-workload_deatail.html"><span>이용상세</span></button>
-										<button type="button" class="btn__default white btn__monitor"><span>모니터링</span></button>
+										<button type="button" class="btn__default white btn__detail" onclick="window.location.href='1-1-1-user-workload_deatail.html'"><span>이용상세</span></button>
+										<button type="button" class="btn__default white btn__monitor" onclick="window.location.href='1-1-4-user-workload_monitor.html'"><span>모니터링</span></button>
 									</div>
 								</dd> 
 							</dl>
@@ -372,8 +372,8 @@
 									</div>
 									<div class="btn--wrap">
 										<button type="button" class="btn__default btn__deploy"><span>배포</span></button>
-										<button type="button" class="btn__default white btn__detail" onclick="window.location.href='1-2-user-workload_deatail.html"><span>이용상세</span></button>
-										<button type="button" class="btn__default white btn__monitor"><span>모니터링</span></button>
+										<button type="button" class="btn__default white btn__detail" onclick="window.location.href='1-1-1-user-workload_deatail.html'"><span>이용상세</span></button>
+										<button type="button" class="btn__default white btn__monitor" onclick="window.location.href='1-1-4-user-workload_monitor.html'"><span>모니터링</span></button>
 									</div>
 								</dd> 
 							</dl>
