--- a/0-user-main.html
+++ b/0-user-main.html
@@ -58,7 +58,7 @@
 								<li class="deploy">
 									<a href="javascript:;" class="depth1"><span>Deploy the workload</span></a>
 									<ul class="depth2">
-										<li><a href="1-1-workload_list_type-card.html ">워크로드 관리</a></li>
+										<li><a href="1-0-workload_list_type-card.html ">워크로드 관리</a></li>
 										<li><a href="">워크로드 지출내역</a></li>
 										<li><a href="">새 워크로드 생성</a></li>
 										<li><a href="">지정 노드 현황</a></li>
@@ -184,7 +184,7 @@
 				</div>
 				<div class="main__workload">
 					<div class="title--wrap">
-						<h2><a href="">Workload</a></h2>
+						<h2><a href="1-0-workload_list_type-card.html">Workload</a></h2>
 						<ul class="status__list">
 							<li>전체 10</li>
 							<li>배포 3</li>
@@ -193,7 +193,7 @@
 						</ul>
 					</div>
 					<ul class="workload-index__list">
-						<li>
+						<li onclick="window.location.href='1-1-3-user-workload_info.html'" >
 							<!-- 미배포 -->
 							<dl class="workload-index__item">
 								<dt>
@@ -231,7 +231,7 @@
 								</dd> 
 							</dl>
 						</li>
-						<li>
+						<li onclick="window.location.href='1-1-3-user-workload_info.html'" >
 							<!-- 실행 -->
 							<dl class="workload-index__item">
 								<dt>
@@ -269,7 +269,7 @@
 								</dd> 
 							</dl>
 						</li>
-						<li>
+						<li onclick="window.location.href='1-1-3-user-workload_info.html'" >
 							<!-- 종료 -->
 							<dl class="workload-index__item">
 								<dt>
@@ -307,7 +307,7 @@
 								</dd> 
 							</dl>
 						</li>
-						<li>
+						<li onclick="window.location.href='1-1-3-user-workload_info.html'" >
 							<!-- 실행 -->
 							<dl class="workload-index__item">
 								<dt>
@@ -345,7 +345,7 @@
 								</dd> 
 							</dl>
 						</li>
-						<li>
+						<li onclick="window.location.href='1-1-3-user-workload_info.html'" >
 							<!-- 실행 -->
 							<dl class="workload-index__item">
 								<dt>
@@ -383,7 +383,7 @@
 								</dd> 
 							</dl>
 						</li>
-						<li>
+						<li onclick="window.location.href='1-1-3-user-workload_info.html'" >
 							<!-- 실행 -->
 							<dl class="workload-index__item">
 								<dt>
