--- a/1-1-1-user-workload_deatail.html
+++ b/1-1-1-user-workload_deatail.html
@@ -21,11 +21,9 @@
 	<link rel="shortcut icon" href="assets/favi/favicon.ico">
 	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css"/>
 	<link rel="stylesheet" type="text/css" href="assets/css/swiper.jquery.min.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/common.css" />
 	<script type="text/javascript" src="assets/js/jquery-3.6.0.min.js"></script>
-	<script  src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="assets/js/swiper-bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
 	<script type="text/javascript" src="assets/js/common.js"></script>
@@ -60,7 +58,7 @@
 								<li class="deploy">
 									<a href="javascript:;" class="depth1 is-active"><span>Deploy the workload</span></a>
 									<ul class="depth2">
-										<li><a href="1-1-workload_list_type-card.html" class="is-active">워크로드 관리</a></li>
+										<li><a href="1-0-workload_list_type-card.html" class="is-active">워크로드 관리</a></li>
 										<li><a href="">워크로드 지출내역</a></li>
 										<li><a href="">새 워크로드 생성</a></li>
 										<li><a href="">지정 노드 현황</a></li>
@@ -150,20 +148,18 @@
 					<div class="detail__title--wrap">
 						<button type="button" class="btn__prev-page"><span class="blind">이전으로</span></button>
 						<h3>이용상세  -  #888 [<span class="tcolor4">RTX4090</span>]</h3>
-						<div class="date-filter--wrap">
-							<div class="datepicker--wrap">
-								<input type="text" value="2025-02-07" class="datepicker"/>
-							</div>
-							<button type="button" class="btn__default white btn__calendar">조회</button>
+						<div class="status--wrap">
+							<select name="">
+								<option value="">2025년</option>
+								<option value="">2024년</option>
+								<option value="">2023년</option>
+							</select>
+							<select name="">
+								<option value="">03월</option>
+								<option value="">02월</option>
+								<option value="">01월</option>
+							</select>
 						</div>
-						<script>
-							$(function(){
-									$('.datepicker').datepicker({
-										showOn: "both",
-										buttonImage: "assets/images/ico_calendar.png", 
-									});
-							})
-						</script>
 					</div>
 					<div class="type-flex--wrap">
 						<div class="type-flex flex-title">
@@ -181,7 +177,7 @@
 							<ul>
 								<li>
 									<div class="type-flex flex-content">
-										<div class="flex-child w-all mo-w80"><a href="" class="no-deco">2025-02-13</a></div>
+										<div class="flex-child w-all mo-w80"><a href="1-1-2-user-workload_deatail_sub.html" class="no-deco">2025-02-13</a></div>
 										<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 										<div class="flex-child w-all">1,884원</div>
 										<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -190,13 +186,13 @@
 										<div class="flex-child w-all pc-only">100%</div>
 										<div class="flex-child w-all pc-only">180.63KB</div>
 										<div class="flex-child w-all pc-only">
-											<button type="button" class="btn__default btn__detail2"><span>세부내역</span></button>
+											<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-1-2-user-workload_deatail_sub.html'"><span>세부내역</span></button>
 										</div>
 								</li>
 								<!-- 단순 반복 -->
 								<li>
 									<div class="type-flex flex-content">
-										<div class="flex-child w-all mo-w80"><a href="" class="no-deco">2025-02-13</a></div>
+										<div class="flex-child w-all mo-w80"><a href="1-1-2-user-workload_deatail_sub.html" class="no-deco">2025-02-13</a></div>
 										<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 										<div class="flex-child w-all">1,884원</div>
 										<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -205,13 +201,13 @@
 										<div class="flex-child w-all pc-only">100%</div>
 										<div class="flex-child w-all pc-only">180.63KB</div>
 										<div class="flex-child w-all pc-only">
-											<button type="button" class="btn__default btn__detail2"><span>세부내역</span></button>
+											<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-1-2-user-workload_deatail_sub.html'"><span>세부내역</span></button>
 										</div>
 									</div>
 								</li>
 								<li>
 									<div class="type-flex flex-content">
-										<div class="flex-child w-all mo-w80"><a href="" class="no-deco">2025-02-13</a></div>
+										<div class="flex-child w-all mo-w80"><a href="1-1-2-user-workload_deatail_sub.html" class="no-deco">2025-02-13</a></div>
 										<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 										<div class="flex-child w-all">1,884원</div>
 										<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -220,7 +216,7 @@
 										<div class="flex-child w-all pc-only">100%</div>
 										<div class="flex-child w-all pc-only">180.63KB</div>
 										<div class="flex-child w-all pc-only">
-											<button type="button" class="btn__default btn__detail2"><span>세부내역</span></button>
+											<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-1-2-user-workload_deatail_sub.html'"><span>세부내역</span></button>
 										</div>
 									</div>
 								</li>
