사용자-워크로드생성 작업중

--- a/1-0-workload_list_type-card.html
+++ b/1-0-workload_list_type-card.html
@@ -59,9 +59,9 @@
 									<a href="javascript:;" class="depth1 is-active"><span>Deploy the workload</span></a>
 									<ul class="depth2">
 										<li><a href="1-workload_list_type-card.html" class="is-active">워크로드 관리</a></li>
-										<li><a href="">워크로드 지출내역</a></li>
-										<li><a href="">새 워크로드 생성</a></li>
-										<li><a href="">지정 노드 현황</a></li>
+										<li><a href="1-2-1-workload_expense.html">워크로드 지출내역</a></li>
+										<li><a href="1-3-workload_create.html">새 워크로드 생성</a></li>
+										<li><a href="1-4-1-workload_node_status.html">지정 노드 현황</a></li>
 									</ul> 
 								</li>
 								<li class="point">
@@ -83,7 +83,7 @@
 								</li>
 							</ul>
 						</div>
-						<button type="button" class="btn__default btn__mode">Go Share Mode</button>
+						<button type="button" class="btn__default btn__mode" onclick="window.location.href='0-provider-main.html'">Go Share Mode</button>
 					</div>
 				</div>
 				<div class="notification--wrap">
