--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<td class="note">그래프 확인</td>
 				</tr>
 				<tr>
-				  <td rowspan="10">워크로드 관리</td>
+				  <td rowspan="11">워크로드 관리</td>
 				  <td rowspan="2">리스트</td>
 				  <td>카드타입</td>
 				  <td></td>
@@ -126,7 +126,7 @@
 				<tr>
 				  <td>배포이벤트</td>
 				  <td><a href="1-1-3-2-user-workload_info_event.html" target="_blank">1-1-3-2-user-workload_info_event.html</a></td>
-				  <td></td>
+				  <td class="end">완료</td>
 					<td class="note">페이징 추가</td>
 				</tr>
 				<tr>
@@ -134,14 +134,21 @@
 				  <td></td>
 				  <td></td>
 				  <td><a href="1-1-4-user-workload_monitor.html" target="_blank">1-1-4-user-workload_monitor.html</a></td>
+				  <td class="end">완료</td>
+				  <td class="note">그래프확인</td>
+				</tr>
+				<tr>
+				  <td rowspan="2">지출내역</td>
 				  <td></td>
+				  <td></td>
+				  <td><a href="1-2-1-workload_expense.html" target="_blank">1-2-1-workload_expense.html</a></td>
+				  <td class="end">완료</td>
 				  <td class="note"></td>
 				</tr>
 				<tr>
-				  <td>지출내역</td>
+				  <td>세부내역</td>
 				  <td></td>
-				  <td></td>
-				  <td><a href="1-2-workload_expense.html" target="_blank">1-2-workload_expense.html</a></td>
+				  <td><a href="1-2-2-workload_expense_detail.html" target="_blank">1-2-2-workload_expense_detail.html</a></td>
 				  <td></td>
 				  <td class="note"></td>
 				</tr>
@@ -150,15 +157,15 @@
 				  <td></td>
 				  <td></td>
 				  <td><a href="1-3-workload_create.html" target="_blank">1-3-workload_create.html</a></td>
-				  <td></td>
+				  <td>작업중</td>
 				  <td class="note"></td>
 				</tr>
 				<tr>
 				  <td>지정 노드 현황</td>
 				  <td></td>
 				  <td></td>
-				  <td><a href="1-4-workload_node_status.html" target="_blank">1-4-workload_node_status.html</a></td>
-				  <td></td>
+				  <td><a href="1-4-1-workload_node_status.html" target="_blank">1-4-1-workload_node_status.html</a></td>
+				  <td class="end">완료</td>
 				  <td class="note"></td>
 				</tr>
 			  </table>
