--- a/1-1-2-user-workload_deatail_sub.html
+++ b/1-1-2-user-workload_deatail_sub.html
@@ -61,9 +61,9 @@
 									<a href="javascript:;" class="depth1 is-active"><span>Deploy the workload</span></a>
 									<ul class="depth2">
 										<li><a href="1-0-workload_list_type-card.html" class="is-active">워크로드 관리</a></li>
-										<li><a href="">워크로드 지출내역</a></li>
-										<li><a href="">새 워크로드 생성</a></li>
-										<li><a href="">지정 노드 현황</a></li>
+										<li><a href="1-2-1-workload_expense.html">워크로드 지출내역</a></li>
+										<li><a href="1-3-workload_create.html">새 워크로드 생성</a></li>
+										<li><a href="1-4-1-workload_node_status.html">지정 노드 현황</a></li>
 									</ul> 
 								</li>
 								<li class="point">
@@ -85,7 +85,7 @@
 								</li>
 							</ul>
 						</div>
-						<button type="button" class="btn__default btn__mode">Go Share Mode</button>
+						<button type="button" class="btn__default btn__mode" onclick="window.location.href='0-provider-main.html'">Go Share Mode</button>
 					</div>
 				</div>
 				<div class="notification--wrap">
@@ -143,7 +143,7 @@
 		</div>
 		<!-- //공통헤더 -->
 
-		<!-- 워크로드 이용상세 -->
+		<!-- 워크로드 이용상세 - 세부내역 -->
 		<div class="container">
 			<div class="container__inner">
 				<div class="workload__list--wrap">
@@ -168,7 +168,7 @@
 							})
 						</script>
 					</div>
-					<div class="type-flex--wrap scrollable">
+					<div class="type-flex--wrap scrollable"><!-- mo에서 가로스크롤 class="scrollable" -->
 						<div class="type-flex--wrap__inner">
 							<div class="type-flex flex-title">
 								<div class="flex-child w70 mo-w40">시간<br />(UTC)</div>
