--- a/1-1-3-2-user-workload_info_event.html
+++ b/1-1-3-2-user-workload_info_event.html
@@ -59,9 +59,9 @@
 									<a href="javascript:;" class="depth1 is-active"><span>Deploy the workload</span></a>
 									<ul class="depth2">
 										<li><a href="1-0-workload_list_type-card.html" class="is-active">워크로드 관리</a></li>
-										<li><a href="">워크로드 지출내역</a></li>
-										<li><a href="">새 워크로드 생성</a></li>
-										<li><a href="">지정 노드 현황</a></li>
+										<li><a href="1-2-1-workload_expense.html">워크로드 지출내역</a></li>
+										<li><a href="1-3-workload_create.html">새 워크로드 생성</a></li>
+										<li><a href="1-4-1-workload_node_status.html">지정 노드 현황</a></li>
 									</ul> 
 								</li>
 								<li class="point">
@@ -83,7 +83,7 @@
 								</li>
 							</ul>
 						</div>
-						<button type="button" class="btn__default btn__mode">Go Share Mode</button>
+						<button type="button" class="btn__default btn__mode" onclick="window.location.href='0-provider-main.html'">Go Share Mode</button>
 					</div>
 				</div>
 				<div class="notification--wrap">
@@ -141,10 +141,10 @@
 		</div>
 		<!-- //공통헤더 -->
 
-		<!-- 워크로드 이용상세 -->
+		<!-- 배포이벤트 -->
 		<div class="container">
 			<div class="container__inner">
-				<div class="workload__event--wrap">
+				<div class="workload__event--wrap"><!-- 배포이벤트 class="workload__event--wrap" -->
 					<div class="detail__title--wrap">
 						<button type="button" class="btn__prev-page"><span class="blind">이전으로</span></button>
 						<h3>배포 이벤트 - dep515</h3>
@@ -170,7 +170,7 @@
 											<dt>
 												<div class="status__info">
 													<strong>삭제</strong>
-													<div class="status__date">
+													<div class="status__date"> 
 														<span class="date">2024-12-11</span>
 														<span class="time">11:30:56</span>
 													</div>
@@ -182,8 +182,8 @@
 												<div class="occurrence__date">
 													<span>최소 발생일시</span>
 													<div class="status__date">
-														<span class="date">2024-12-11</span>
-														<span class="time">11:30:56</span>
+														<div class="date">2024-12-11</div>
+														<div class="time">11:30:56</div>
 													</div>
 												</div>
 											</dt>
@@ -208,6 +208,246 @@
 													</div>
 												</div>
 												<div class="event__content--text">Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready": dial tcp 10.249.84.81:15021: connect: connection refused Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready": dial tcp 10.249.84.81:15021: connect: connection refused</div>
+											</dd>
+										</dl>
+									</li>
+									<!-- 반복 -->
+									<li>
+										<dl class="event__content--item">
+											<dt>
+												<div class="status__info">
+													<strong>삭제</strong>
+													<div class="status__date"> 
+														<span class="date">2024-12-11</span>
+														<span class="time">11:30:56</span>
+													</div>
+												</div>
+												<div class="event__reason">
+													이벤트 사유 :
+													<strong class="tcolor5">unhealthy</strong>
+												</div>
+												<div class="occurrence__date">
+													<span>최소 발생일시</span>
+													<div class="status__date">
+														<div class="date">2024-12-11</div>
+														<div class="time">11:30:56</div>
+													</div>
+												</div>
+											</dt>
+											<dd>
+												<div class="tooltip--wrap">
+													<button type="button" class="btn__tooltip"><span class="blind">툴팁열기/닫기버튼</span></button>
+													<div class="tooltip__content">
+														<ul class="event__tooltip__info">
+															<li>
+																<span>이벤트 유형 :</span>
+																<span>경고</span>
+															</li>
+															<li>
+																<span>보고구성요소 :</span>
+																<span>kubelet</span>
+															</li>
+															<li>
+																<span>이벤트대상유형 :</span>
+																<span>POD</span>
+															</li>
+														</ul>
+													</div>
+												</div>
+												<div class="event__content--text">Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready"</div>
+											</dd>
+										</dl>
+									</li>
+									<li>
+										<dl class="event__content--item">
+											<dt>
+												<div class="status__info">
+													<strong>삭제</strong>
+													<div class="status__date"> 
+														<span class="date">2024-12-11</span>
+														<span class="time">11:30:56</span>
+													</div>
+												</div>
+												<div class="event__reason">
+													이벤트 사유 :
+													<strong class="tcolor5">unhealthy</strong>
+												</div>
+												<div class="occurrence__date">
+													<span>최소 발생일시</span>
+													<div class="status__date">
+														<div class="date">2024-12-11</div>
+														<div class="time">11:30:56</div>
+													</div>
+												</div>
+											</dt>
+											<dd>
+												<div class="tooltip--wrap">
+													<button type="button" class="btn__tooltip"><span class="blind">툴팁열기/닫기버튼</span></button>
+													<div class="tooltip__content">
+														<ul class="event__tooltip__info">
+															<li>
+																<span>이벤트 유형 :</span>
+																<span>경고</span>
+															</li>
+															<li>
+																<span>보고구성요소 :</span>
+																<span>kubelet</span>
+															</li>
+															<li>
+																<span>이벤트대상유형 :</span>
+																<span>POD</span>
+															</li>
+														</ul>
+													</div>
+												</div>
+												<div class="event__content--text">Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready"</div>
+											</dd>
+										</dl>
+									</li>
+								</ul>
+							</dd>
+						</dl>
+						<!-- 반복 -->
+						<dl class="event__item">
+							<dt><strong>2025-05-08</strong></dt>
+							<dd>
+								<ul class="event__list">
+									<li>
+										<dl class="event__content--item">
+											<dt>
+												<div class="status__info">
+													<strong>삭제</strong>
+													<div class="status__date"> 
+														<span class="date">2024-12-11</span>
+														<span class="time">11:30:56</span>
+													</div>
+												</div>
+												<div class="event__reason">
+													이벤트 사유 :
+													<strong class="tcolor5">unhealthy</strong>
+												</div>
+												<div class="occurrence__date">
+													<span>최소 발생일시</span>
+													<div class="status__date">
+														<div class="date">2024-12-11</div>
+														<div class="time">11:30:56</div>
+													</div>
+												</div>
+											</dt>
+											<dd>
+												<div class="tooltip--wrap">
+													<button type="button" class="btn__tooltip"><span class="blind">툴팁열기/닫기버튼</span></button>
+													<div class="tooltip__content">
+														<ul class="event__tooltip__info">
+															<li>
+																<span>이벤트 유형 :</span>
+																<span>경고</span>
+															</li>
+															<li>
+																<span>보고구성요소 :</span>
+																<span>kubelet</span>
+															</li>
+															<li>
+																<span>이벤트대상유형 :</span>
+																<span>POD</span>
+															</li>
+														</ul>
+													</div>
+												</div>
+												<div class="event__content--text">Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready": dial tcp 10.249.84.81:15021: connect: connection refused Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready": dial tcp 10.249.84.81:15021: connect: connection refused</div>
+											</dd>
+										</dl>
+									</li>
+									<!-- 반복 -->
+									<li>
+										<dl class="event__content--item">
+											<dt>
+												<div class="status__info">
+													<strong>삭제</strong>
+													<div class="status__date"> 
+														<span class="date">2024-12-11</span>
+														<span class="time">11:30:56</span>
+													</div>
+												</div>
+												<div class="event__reason">
+													이벤트 사유 :
+													<strong class="tcolor5">unhealthy</strong>
+												</div>
+												<div class="occurrence__date">
+													<span>최소 발생일시</span>
+													<div class="status__date">
+														<div class="date">2024-12-11</div>
+														<div class="time">11:30:56</div>
+													</div>
+												</div>
+											</dt>
+											<dd>
+												<div class="tooltip--wrap">
+													<button type="button" class="btn__tooltip"><span class="blind">툴팁열기/닫기버튼</span></button>
+													<div class="tooltip__content">
+														<ul class="event__tooltip__info">
+															<li>
+																<span>이벤트 유형 :</span>
+																<span>경고</span>
+															</li>
+															<li>
+																<span>보고구성요소 :</span>
+																<span>kubelet</span>
+															</li>
+															<li>
+																<span>이벤트대상유형 :</span>
+																<span>POD</span>
+															</li>
+														</ul>
+													</div>
+												</div>
+												<div class="event__content--text">Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready"</div>
+											</dd>
+										</dl>
+									</li>
+									<li>
+										<dl class="event__content--item">
+											<dt>
+												<div class="status__info">
+													<strong>삭제</strong>
+													<div class="status__date"> 
+														<span class="date">2024-12-11</span>
+														<span class="time">11:30:56</span>
+													</div>
+												</div>
+												<div class="event__reason">
+													이벤트 사유 :
+													<strong class="tcolor5">unhealthy</strong>
+												</div>
+												<div class="occurrence__date">
+													<span>최소 발생일시</span>
+													<div class="status__date">
+														<div class="date">2024-12-11</div>
+														<div class="time">11:30:56</div>
+													</div>
+												</div>
+											</dt>
+											<dd>
+												<div class="tooltip--wrap">
+													<button type="button" class="btn__tooltip"><span class="blind">툴팁열기/닫기버튼</span></button>
+													<div class="tooltip__content">
+														<ul class="event__tooltip__info">
+															<li>
+																<span>이벤트 유형 :</span>
+																<span>경고</span>
+															</li>
+															<li>
+																<span>보고구성요소 :</span>
+																<span>kubelet</span>
+															</li>
+															<li>
+																<span>이벤트대상유형 :</span>
+																<span>POD</span>
+															</li>
+														</ul>
+													</div>
+												</div>
+												<div class="event__content--text">Startup probe failed: Get "http://10.249.84.81:15021/healthz/ready"</div>
 											</dd>
 										</dl>
 									</li>
