--- a/1-2-1-workload_expense.html
+++ b/1-2-1-workload_expense.html
@@ -58,8 +58,8 @@
 								<li class="deploy">
 									<a href="javascript:;" class="depth1 is-active"><span>Deploy the workload</span></a>
 									<ul class="depth2">
-										<li><a href="1-0-workload_list_type-card.html" class="is-active">워크로드 관리</a></li>
-										<li><a href="1-2-1-workload_expense.html">워크로드 지출내역</a></li>
+										<li><a href="1-0-workload_list_type-card.html">워크로드 관리</a></li>
+										<li><a href="1-2-1-workload_expense.html" class="is-active">워크로드 지출내역</a></li>
 										<li><a href="1-3-workload_create.html">새 워크로드 생성</a></li>
 										<li><a href="1-4-1-workload_node_status.html">지정 노드 현황</a></li>
 									</ul> 
@@ -141,13 +141,32 @@
 		</div>
 		<!-- //공통헤더 -->
 
-		<!-- 워크로드 이용상세 -->
+		<!-- 워크로드 지출내역 -->
 		<div class="container">
 			<div class="container__inner">
-				<div class="workload__list--wrap">
+				<div class="workload__expense--wrap"><!-- 지출내역 class="workload__expense--wrap" -->
+					<ul class="expense__summary">
+						<li>
+							<dl class="expense__summary--item">
+								<dt>누적 지출 포인트</dt>
+								<dd>103,265 P</dd>
+							</dl>
+						</li>
+						<li>
+							<dl class="expense__summary--item">
+								<dt>전월 지출 포인트</dt>
+								<dd>3,265 P</dd>
+							</dl>
+						</li>
+						<li>
+							<dl class="expense__summary--item">
+								<dt>당월 지출 포인트</dt>
+								<dd>8,213 P</dd>
+							</dl>
+						</li>
+					</ul>
 					<div class="detail__title--wrap">
-						<button type="button" class="btn__prev-page"><span class="blind">이전으로</span></button>
-						<h3>이용상세  -  #888 [<span class="tcolor4">RTX4090</span>]</h3>
+						<h4>워크로드 월별 지출내역</h4>
 						<div class="status--wrap">
 							<select name="">
 								<option value="">2025년</option>
@@ -164,7 +183,7 @@
 					<div class="type-flex--wrap">
 						<div class="type-flex--wrap__inner">
 							<div class="type-flex flex-title">
-								<div class="flex-child w-all mo-w80">날짜</div>
+								<div class="flex-child w-all mo-w80">워크로드명</div>
 								<div class="flex-child w-all mo-w80">포인트</div>
 								<div class="flex-child w-all">금액</div>
 								<div class="flex-child w-all mo-w80">기본금액</div>
@@ -178,7 +197,7 @@
 								<ul>
 									<li>
 										<div class="type-flex flex-content">
-											<div class="flex-child w-all mo-w80"><a href="1-1-2-user-workload_deatail_sub.html" class="no-deco">2025-02-13</a></div>
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
 											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 											<div class="flex-child w-all">1,884원</div>
 											<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -187,14 +206,13 @@
 											<div class="flex-child w-all pc-only">100%</div>
 											<div class="flex-child w-all pc-only">180.63KB</div>
 											<div class="flex-child w-all pc-only">
-												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-1-2-user-workload_deatail_sub.html'"><span>세부내역</span></button>
+												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-2-2-workload_expense_detail.html'"><span>세부내역</span></button>
 											</div>
-										</div>
 									</li>
 									<!-- 단순 반복 -->
 									<li>
 										<div class="type-flex flex-content">
-											<div class="flex-child w-all mo-w80"><a href="1-1-2-user-workload_deatail_sub.html" class="no-deco">2025-02-13</a></div>
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
 											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 											<div class="flex-child w-all">1,884원</div>
 											<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -203,13 +221,12 @@
 											<div class="flex-child w-all pc-only">100%</div>
 											<div class="flex-child w-all pc-only">180.63KB</div>
 											<div class="flex-child w-all pc-only">
-												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-1-2-user-workload_deatail_sub.html'"><span>세부내역</span></button>
+												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-2-2-workload_expense_detail.html'"><span>세부내역</span></button>
 											</div>
-										</div>
 									</li>
 									<li>
 										<div class="type-flex flex-content">
-											<div class="flex-child w-all mo-w80"><a href="1-1-2-user-workload_deatail_sub.html" class="no-deco">2025-02-13</a></div>
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
 											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 											<div class="flex-child w-all">1,884원</div>
 											<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -217,10 +234,7 @@
 											<div class="flex-child w-all pc-only">RTX4090</div>
 											<div class="flex-child w-all pc-only">100%</div>
 											<div class="flex-child w-all pc-only">180.63KB</div>
-											<div class="flex-child w-all pc-only">
-												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-1-2-user-workload_deatail_sub.html'"><span>세부내역</span></button>
-											</div>
-										</div>
+											<div class="flex-child w-all pc-only"></div>
 									</li>
 								</ul>
 							</div>
@@ -230,7 +244,7 @@
 								<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 								<div class="flex-child w-all">1,884원</div>
 								<div class="flex-child w-all mo-w80">1,111,884원</div>
-								<div class="flex-child w-all">123원</div>
+								<div class="flex-child w-all">+369P</div>
 								<div class="flex-child w-all pc-only"></div> 
 								<div class="flex-child w-all pc-only"></div>
 								<div class="flex-child w-all pc-only"></div>
@@ -238,25 +252,103 @@
 							</div>
 						</div>
 					</div>
-					<p class="noti__text">※ 각 날짜를 선택 시 해당 일자의 시간별 세부 이용내역을 확인할 수 있습니다.</p>
-					<div class="pagination">
-						<button type="button" class="btn__first">
-							<span class="blind">처음</span>
-						</button>
-						<button type="button" class="btn__prev">
-							<span class="blind">이전</span>
-						</button>
-						<button type="button" class="is-active"><strong>1</strong>	</button>
-						<button type="button"><strong>2</strong>	</button>
-						<button type="button"><strong>3</strong>	</button>
-						<button type="button"><strong>4</strong>	</button>
-						<button type="button"><strong>5</strong>	</button>
-						<button type="button" class="btn__next">
-							<span class="blind">다음</span>
-						</button>
-						<button type="button" class="btn__last">
-							<span class="blind">마지막</span>
-						</button>
+					<div class="detail__title--wrap">
+						<h4>일자별 지출내역</h4>
+					</div>
+					<div class="expense__title--wrap">
+						<h5>배포상태</h5>
+						<div class="status--wrap">
+							<select name="">
+								<option value="">전체</option>
+								<option value="">미배포</option>
+								<option value="">실행</option>
+								<option value="">종료</option>
+							</select>
+						</div>
+						<div class="status--wrap">
+							<select name="">
+								<option value="">2025년</option>
+								<option value="">2024년</option>
+								<option value="">2023년</option>
+							</select>
+							<select name="">
+								<option value="">03월</option>
+								<option value="">02월</option>
+								<option value="">01월</option>
+							</select>
+						</div>
+					</div>
+					<div class="type-flex--wrap">
+						<div class="type-flex--wrap__inner">
+							<div class="type-flex flex-title">
+								<div class="flex-child w-all mo-w80">워크로드명</div>
+								<div class="flex-child w-all mo-w80">포인트</div>
+								<div class="flex-child w-all">금액</div>
+								<div class="flex-child w-all mo-w80">기본금액</div>
+								<div class="flex-child w-all">이용금액</div>
+								<div class="flex-child w-all pc-only">GPU모델</div> 
+								<div class="flex-child w-all pc-only">GPU이용율</div>
+								<div class="flex-child w-all pc-only">네트워크 이용량</div>
+								<div class="flex-child w-all pc-only">세부내역</div>
+							</div>
+							<div class="type-flex-body">
+								<ul>
+									<li>
+										<div class="type-flex flex-content">
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
+											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
+											<div class="flex-child w-all">1,884원</div>
+											<div class="flex-child w-all mo-w80">1,111,884원</div>
+											<div class="flex-child w-all">123원</div>
+											<div class="flex-child w-all pc-only">RTX4090</div>
+											<div class="flex-child w-all pc-only">100%</div>
+											<div class="flex-child w-all pc-only">180.63KB</div>
+											<div class="flex-child w-all pc-only">
+												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-2-2-workload_expense_detail.html'"><span>세부내역</span></button>
+											</div>
+									</li>
+									<!-- 단순 반복 -->
+									<li>
+										<div class="type-flex flex-content">
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
+											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
+											<div class="flex-child w-all">1,884원</div>
+											<div class="flex-child w-all mo-w80">1,111,884원</div>
+											<div class="flex-child w-all">123원</div>
+											<div class="flex-child w-all pc-only">RTX4090</div>
+											<div class="flex-child w-all pc-only">100%</div>
+											<div class="flex-child w-all pc-only">180.63KB</div>
+											<div class="flex-child w-all pc-only">
+												<button type="button" class="btn__default btn__detail2" onclick="window.location.href='1-2-2-workload_expense_detail.html'"><span>세부내역</span></button>
+											</div>
+									</li>
+									<li>
+										<div class="type-flex flex-content">
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
+											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
+											<div class="flex-child w-all">1,884원</div>
+											<div class="flex-child w-all mo-w80">1,111,884원</div>
+											<div class="flex-child w-all">123원</div>
+											<div class="flex-child w-all pc-only">RTX4090</div>
+											<div class="flex-child w-all pc-only">100%</div>
+											<div class="flex-child w-all pc-only">180.63KB</div>
+											<div class="flex-child w-all pc-only"></div>
+									</li>
+								</ul>
+							</div>
+							<!-- 합계 -->
+							<div class="type-flex flex-foot ">
+								<div class="flex-child w-all mo-w80">합계</div>
+								<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
+								<div class="flex-child w-all">1,884원</div>
+								<div class="flex-child w-all mo-w80">1,111,884원</div>
+								<div class="flex-child w-all">+369P</div>
+								<div class="flex-child w-all pc-only"></div> 
+								<div class="flex-child w-all pc-only"></div>
+								<div class="flex-child w-all pc-only"></div>
+								<div class="flex-child w-all pc-only"></div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
