--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<td class="note">그래프 확인</td>
 				</tr>
 				<tr>
-				  <td rowspan="11">워크로드 관리</td>
+				  <td rowspan="10">워크로드 관리</td>
 				  <td rowspan="2">리스트</td>
 				  <td>카드타입</td>
 				  <td></td>
@@ -138,27 +138,35 @@
 				  <td class="note">그래프확인</td>
 				</tr>
 				<tr>
+				  <td>지출내역</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="1-2-1-workload_expense.html" target="_blank">1-2-1-workload_expense.html</a></td>
+				  <td class="end">완료</td>
+				  <td></td>
+				</tr>
+				<!--<tr>
 				  <td rowspan="2">지출내역</td>
 				  <td></td>
 				  <td></td>
 				  <td><a href="1-2-1-workload_expense.html" target="_blank">1-2-1-workload_expense.html</a></td>
 				  <td class="end">완료</td>
-				  <td class="note"></td>
+				  <td></td>
 				</tr>
 				<tr>
 				  <td>세부내역</td>
 				  <td></td>
 				  <td><a href="1-2-2-workload_expense_detail.html" target="_blank">1-2-2-workload_expense_detail.html</a></td>
 				  <td></td>
-				  <td class="note"></td>
-				</tr>
+				  <td></td>
+				</tr>-->
 				<tr>
 				  <td>새 워크로드 생성</td>
 				  <td></td>
 				  <td></td>
 				  <td><a href="1-3-workload_create.html" target="_blank">1-3-workload_create.html</a></td>
 				  <td>작업중</td>
-				  <td class="note"></td>
+				  <td></td>
 				</tr>
 				<tr>
 				  <td>지정 노드 현황</td>
@@ -166,7 +174,32 @@
 				  <td></td>
 				  <td><a href="1-4-1-workload_node_status.html" target="_blank">1-4-1-workload_node_status.html</a></td>
 				  <td class="end">완료</td>
-				  <td class="note"></td>
+				  <td></td>
+				</tr>
+				<tr>
+				  <td rowspan="3">개인설정</td>
+				  <td>나의 프로필</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="3-1-myprofile.html" target="_blank">3-1-myprofile.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td>저장소 관리</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="3-2-mystorage.html" target="_blank">3-2-mystorage.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td>기본설정</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="3-3-mysetting.html" target="_blank">3-3-mysetting.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
 				</tr>
 			  </table>
 			</div>
