워크로드생성 작업중

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				  <td></td>
 				  <td><a href="1-3-workload_create.html" target="_blank">1-3-workload_create.html</a></td>
 				  <td>작업중</td>
-				  <td></td>
+				  <td class="note">다음스텝 기능확인</td>
 				</tr>
 				<tr>
 				  <td>지정 노드 현황</td>
