공급자 작업중/사용자 피드백 적용

--- a/0-provider-main.html
+++ b/0-provider-main.html
@@ -56,12 +56,12 @@
 									<a href="0-user-main.html" class="depth1 is-active"><span>Home</span></a>
 								</li>
 								<li class="deploy">
-									<a href="javascript:;" class="depth1"><span>Deploy the workload</span></a>
+									<a href="javascript:;" class="depth1"><span>Share the GPU</span></a>
 									<ul class="depth2">
-										<li><a href="1-0-workload_list_type-card.html ">워크로드 관리</a></li>
-										<li><a href="">워크로드 지출내역</a></li>
-										<li><a href="">새 워크로드 생성</a></li>
-										<li><a href="">지정 노드 현황</a></li>
+										<li><a href="">노드 관리</a></li>
+										<li><a href="">노드 수익내역</a></li>
+										<li><a href="">노드 정산내역</a></li>
+										<li><a href="">새 노드 연결</a></li>
 									</ul> 
 								</li>
 								<li class="point">
@@ -83,7 +83,7 @@
 								</li>
 							</ul>
 						</div>
-						<button type="button" class="btn__default btn__mode">Go Share Mode</button>
+						<button type="button" class="btn__default btn__mode">Go Deploy Mode</button>
 					</div>
 				</div>
 				<div class="notification--wrap">
