--- a/0-user-main.html
+++ b/0-user-main.html
@@ -425,7 +425,7 @@
 				</div>
 				<div class="main__workload-chart">
 					<div class="title--wrap type2">
-						<h2>워크로드 현황</h2>
+						<h2>Workload 현황</h2>
 						<ul class="status__list">
 							<li>전체 10</li>
 							<li>배포 3</li>
