--- a/1-0-workload_list_type-card.html
+++ b/1-0-workload_list_type-card.html
@@ -163,8 +163,8 @@
 								<dt>
 									<span class="workload__status deploy">실행</span>
 									<p class="workload__name">Yh-ollama3</p>
-									<a href="" class="btn__edit" title="워크로드 정보수정페이지로 이동"><span class="blind">워크로드 정보수정</span></a>
-									<a href="javascript:alert('워크로드를 삭제하겠습니까?');" class="btn__edit"><span class="blind">워크로드 삭제</span></a>
+									<a href="" class="btn__workload-edit" title="워크로드 정보수정페이지로 이동"><span class="blind">워크로드 정보수정</span></a>
+									<a href="javascript:alert('워크로드를 삭제하겠습니까?');" class="btn__workload-delete"><span class="blind">워크로드 삭제</span></a>
 								</dt>
 								<dd>
 									<div class="date--wrap">
@@ -271,8 +271,8 @@
 								<dt>
 									<span class="workload__status ended">종료</span>
 									<p class="workload__name">Yh-ollama3</p>
-									<a href="" class="btn__edit" title="워크로드 정보수정페이지로 이동"><span class="blind">워크로드 정보수정</span></a>
-									<a href="javascript:alert('워크로드를 삭제하겠습니까?');" class="btn__edit"><span class="blind">워크로드 삭제</span></a>
+									<a href="" class="btn__workload-edit" title="워크로드 정보수정페이지로 이동"><span class="blind">워크로드 정보수정</span></a>
+									<a href="javascript:alert('워크로드를 삭제하겠습니까?');" class="btn__workload-delete"><span class="blind">워크로드 삭제</span></a>
 								</dt>
 								<dd>
 									<div class="date--wrap">
