--- a/1-2-1-workload_expense.html
+++ b/1-2-1-workload_expense.html
@@ -281,7 +281,7 @@
 					<div class="type-flex--wrap">
 						<div class="type-flex--wrap__inner">
 							<div class="type-flex flex-title">
-								<div class="flex-child w-all mo-w80">워크로드명</div>
+								<div class="flex-child w-all mo-w80">일자</div>
 								<div class="flex-child w-all mo-w80">포인트</div>
 								<div class="flex-child w-all">금액</div>
 								<div class="flex-child w-all mo-w80">기본금액</div>
@@ -295,7 +295,7 @@
 								<ul>
 									<li>
 										<div class="type-flex flex-content">
-											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>20250924</strong></a></div>
 											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 											<div class="flex-child w-all">1,884원</div>
 											<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -310,7 +310,7 @@
 									<!-- 단순 반복 -->
 									<li>
 										<div class="type-flex flex-content">
-											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>20250924</strong></a></div>
 											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 											<div class="flex-child w-all">1,884원</div>
 											<div class="flex-child w-all mo-w80">1,111,884원</div>
@@ -324,7 +324,7 @@
 									</li>
 									<li>
 										<div class="type-flex flex-content">
-											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>Yh allama 1</strong></a></div>
+											<div class="flex-child w-all mo-w80"><a href="1-2-2-workload_expense_detail.html" class="no-deco"><strong>20250924</strong></a></div>
 											<div class="flex-child w-all mo-w80"><span class="tcolor3">-1,314.78P</span></div>
 											<div class="flex-child w-all">1,884원</div>
 											<div class="flex-child w-all mo-w80">1,111,884원</div>
