--- a/1-3-workload_create.html
+++ b/1-3-workload_create.html
@@ -245,8 +245,8 @@
 										<dd>
 											<div class="filebox">
 												<input type="text" class="ip__text upload__title" value="" placeholder="Container img URL to deploy  ex> sbison/sdxl-web-auto1111:12" readonly="">
-												<label for="joinInfo5">파일 첨부</label> 
-												<input type="file" id="joinInfo5" class="custom-file">
+												<label for="joinInfo1" class="btn__default btn__file">이미지 검증</label> 
+												<input type="file" id="joinInfo1" class="file__custom">
 												<button class="btn__reset"><img src="assets/images/btn_clear.svg" alt="파일초기화" /></button>
 											</div>
 										</dd>     
@@ -843,19 +843,118 @@
 		<!-- modal : 템플릿1 자세히보기 -->
 		<div id="template__detail1" class="modal__container template__detail">
 			<div class="template--wrap">
-			
+				<div class="template__title--wrap">
+					<div class="template__thumb"><div><img src="assets/images/ico_gnb1.png" alt="템플릿썸네일" /></div></div>
+					<div class="template__title">
+						<div class="template__name">템플릿명1</div>
+						<div class="template__url">imgurl : /r/nvidia/cuda</div>
+					</div>
+				</div>
+				<div class="template__info--wrap">
+					<dl class="creat__form__item">
+						<dt>저장소 유형</dt>
+						<dd>
+							<div>허깅페이스</div>
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>컨테이너 이미지</dt>
+						<dd>
+							<input type="text" class="ip__text w200" placeholder="Container img URL to deploy  ex> sbison/sdxl-web-auto1111:12" />
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>컨테이너 포트</dt>
+						<dd>
+							<input type="text" class="ip__text w200" placeholder="8000" />
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>설명</dt>
+						<dd>
+							<textarea cols="" rows="" placeholder="템플릿에 대한 설명"></textarea>
+						</dd>
+					</dl>
+				</div>
 			</div>
-			템플릿자세히보기1
 			<button type="button" class="modal__close"><span class="blind">모달닫기</span></button>
 		</div>
 		<!-- modal : 템플릿2 자세히보기 -->
 		<div id="template__detail2" class="modal__container template__detail">
-			템플릿자세히보기2
+			<div class="template--wrap">
+				<div class="template__title--wrap">
+					<div class="template__thumb"><div><img src="assets/images/@sample1.jpg" alt="템플릿썸네일" /></div></div>
+					<div class="template__title">
+						<div class="template__name">템플릿명2</div>
+						<div class="template__url">imgurl : /r/nvidia/cuda</div>
+					</div>
+				</div>
+				<div class="template__info--wrap">
+					<dl class="creat__form__item">
+						<dt>저장소 유형</dt>
+						<dd>
+							<div>허깅페이스</div>
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>컨테이너 이미지</dt>
+						<dd>
+							<input type="text" class="ip__text w200" placeholder="Container img URL to deploy  ex> sbison/sdxl-web-auto1111:12" />
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>컨테이너 포트</dt>
+						<dd>
+							<input type="text" class="ip__text w200" placeholder="8000" />
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>설명</dt>
+						<dd>
+							<textarea cols="" rows="" placeholder="템플릿에 대한 설명"></textarea>
+						</dd>
+					</dl>
+				</div>
+			</div>
 			<button type="button" class="modal__close"><span class="blind">모달닫기</span></button>
 		</div>
 		<!-- modal : 템플릿3 자세히보기 -->
 		<div id="template__detail3" class="modal__container template__detail">
-			템플릿자세히보기3
+			<div class="template--wrap">
+				<div class="template__title--wrap">
+					<div class="template__thumb"><div><img src="assets/images/@sample2.jpg" alt="템플릿썸네일" /></div></div>
+					<div class="template__title">
+						<div class="template__name">템플릿명3</div>
+						<div class="template__url">imgurl : /r/nvidia/cuda</div>
+					</div>
+				</div>
+				<div class="template__info--wrap">
+					<dl class="creat__form__item">
+						<dt>저장소 유형</dt>
+						<dd>
+							<div>허깅페이스</div>
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>컨테이너 이미지</dt>
+						<dd>
+							<input type="text" class="ip__text w200" placeholder="Container img URL to deploy  ex> sbison/sdxl-web-auto1111:12" />
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>컨테이너 포트</dt>
+						<dd>
+							<input type="text" class="ip__text w200" placeholder="8000" />
+						</dd>
+					</dl>
+					<dl class="creat__form__item">
+						<dt>설명</dt>
+						<dd>
+							<textarea cols="" rows="" placeholder="템플릿에 대한 설명"></textarea>
+						</dd>
+					</dl>
+				</div>
+			</div>
 			<button type="button" class="modal__close"><span class="blind">모달닫기</span></button>
 		</div>
 	</div>
