--- a/3-2-mystorage.html
+++ b/3-2-mystorage.html
@@ -162,14 +162,14 @@
 										<colgroup>
 												<col width="*" />
 												<col width="*" />
-												<col width="*" />
+												<col width="*" class="pc-only" />
 												<col width="60px" />
 											</colgroup>
 										<thead>
 											<tr>
 												<th scope="col">클라우드/저장소</th>
 												<th scope="col">접근키(Access Key) / 사용자 이름</th>
-												<th scope="col">비밀 키(Secret Key) / 사용자 비밀번</th>
+												<th scope="col" class="pc-only">비밀 키(Secret Key) / 사용자 비밀번</th>
 												<th scope="col"></th>
 											</tr>
 										</thead>
@@ -177,7 +177,7 @@
 											<tr>
 												<th scope="row">도커허브</th>
 												<td><a href="">test@gmail.com</a></td>
-												<td>************ </td>
+												<td class="pc-only">************ </td>
 												<td>
 													<div class="tooltip--wrap option--wrap">
 														<button type="button" class="btn__tooltip btn__option"><span class="blind">툴팁열기/닫기버튼</span></button>
@@ -192,7 +192,7 @@
 											<tr>
 												<th scope="row">깃허브</th>
 												<td><a href="">test@gmail.com</a></td>
-												<td>************ </td>
+												<td class="pc-only">************ </td>
 												<td>
 													<div class="tooltip--wrap option--wrap">
 														<button type="button" class="btn__tooltip btn__option"><span class="blind">툴팁열기/닫기버튼</span></button>
@@ -221,7 +221,7 @@
 								<p>개인 저장소 등록 후 워크로드 생성 시 개인저장소를 선택하여 설정을 진행해주세요.</p>
 							</div>
 							<a href="" class="btn__guide">사용 가이드 보기</a>
-							<div class="storage__information--wrap">
+							<div class="storage__information--wrap type2">
 								<table>
 									<colgroup>
 											<col width="120px" />
