--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 				  <td></td>
 				  <td><a href="1-1-1-user-workload_deatail.html" target="_blank">1-1-1-user-workload_deatail.html</a></td>
 				  <td class="end">완료</td>
-					<td class="note">페이징 추가</td>
+					<td></td>
 				</tr>
 				<tr>
 				  <td>세부내역</td>
 				  <td><a href="1-1-2-user-workload_deatail_sub.html" target="_blank">1-1-2-user-workload_deatail_sub.html</a></td>
 				  <td class="end">완료</td>
-					<td class="note">페이징 추가</td>
+					<td></td>
 				</tr>
 				<tr>
 				  <td rowspan="2">정보</td>
@@ -127,7 +127,7 @@
 				  <td>배포이벤트</td>
 				  <td><a href="1-1-3-2-user-workload_info_event.html" target="_blank">1-1-3-2-user-workload_info_event.html</a></td>
 				  <td class="end">완료</td>
-					<td class="note">페이징 추가</td>
+					<td class="note">페이징 추가</td> 
 				</tr>
 				<tr>
 				  <td>모니터링</td>
@@ -165,7 +165,7 @@
 				  <td></td>
 				  <td></td>
 				  <td><a href="1-3-workload_create.html" target="_blank">1-3-workload_create.html</a></td>
-				  <td>작업중</td>
+				  <td class="end">완료</td>
 				  <td class="note">다음스텝 기능확인</td>
 				</tr>
 				<tr>
@@ -229,6 +229,63 @@
 				  <td></td>
 				  <td></td>
 				  <td><a href="0-provider-main.html" target="_blank">0-provider-main.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td rowspan="3">Share the GPU</td>
+				  <td>노드 관리</td>
+				  <td>노드 가격 설정</td>
+				  <td></td>
+				  <td><a href="4-1-node.html" target="_blank">4-1-node.html</a></td>
+				  <td></td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td>노드 수익내역</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="4-2-node_revenue.html" target="_blank">4-2-node_revenue.html</a></td>
+				  <td></td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td>새 노드 연결</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="4-3-node_create.html" target="_blank">4-3-node_create.html</a></td>
+				  <td></td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td rowspan="4">My Point</td>
+				  <td>포인트 현황</td>
+				  <td>적립내역</td>
+				  <td></td>
+				  <td><a href="4-1-point.html" target="_blank">4-1-point.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td>포인트 충전</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="4-2-point_recharge.html" target="_blank">4-2-point_recharge.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td rowspan="2">포인트 정산/환급</td>
+				  <td></td>
+				  <td></td>
+				  <td><a href="4-3-point_set.html" target="_blank">4-3-point_set.html</a></td>
+				  <td class="end">완료</td>
+					<td></td>
+				</tr>
+				<tr>
+				  <td>정산/환급 신청</td>
+				  <td></td>
+				  <td><a href="4-4-point_withdraw.html" target="_blank">4-4-point_withdraw.html</a></td>
 				  <td class="end">완료</td>
 					<td></td>
 				</tr>
